--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,8 +6,36 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-         <table class="table table-striped">
-
-        </table>
+        <div class="page-header">
+            <h1>My Board <small>with Node.js</small></h1>
+        </div>
+        <div>
+            <table class="table table-hover">
+                <thead>
+                   <tr>
+                       <th>No</th>
+                       <th>Title</th>
+                       <th>작성자</th>
+                       <th>조회수</th>
+                   </tr>
+                </thead>
+                <tbody>
+                   <% for(var i=0; i<maxDisplayNum; i++){%>
+                   <tr>
+                        <td><%= boardResult[i].num %></td>
+                        <td><%= boardResult[i].title %></td>
+                        <td><%= boardResult[i].writer %></td>
+                        <td><%= boardResult[i].count %></td>
+                    </tr>
+                    <%}%>
+                </tbody>  
+            </table>
+            <div>
+                <% for(var i=0; i<page; i++){%>
+                    <a href=""><%= i+1 %></a>
+                <%}%>
+            </div>
+        </div>
+        <a class="btn btn-default" href="/main/new" role="button">글쓰기</a>
     </body>
 </html>
