--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background: #448ed3 ;
+	background: #D5D5D5 ;
 	font-family: "Lato" ;
 }
 .wrap {
@@ -16,16 +16,15 @@ body {
 	margin-top: 10%;
 }
 .wrap input {
-	border: none;
 	background: #fff;
-  font-family:Lato ;
-  font-weight:700 ;
+  	font-family:Lato ;
+  	font-weight:700 ;
 	display: block;
 	height: 40px;
-	outline: none;
 	width: calc(100% - 24px) ;
 	margin: auto;
 	padding: 6px 12px 6px 12px;
+	border: 1px solid black;
 }
 .bar {
 	width: 100%;
@@ -39,12 +38,6 @@ body {
 	display: block;
 	background: #d1d1d1;
 }
-.wrap input[type="text"] {
-	border-radius: 7px 7px 0px 0px ;
-}
-.wrap input[type="password"] {
-	border-radius: 0px 0px 7px 7px ;
-}
 .forgot_link {
 	color: #83afdf ;
 	color: #83afdf;
@@ -56,16 +49,12 @@ body {
 }
 .wrap button {
 	width: 100%;
-	border-radius: 7px;
-	background: #b6ee65;
 	text-decoration: center;
 	border: none;
-	color: #51771a;
   margin-top:-5px;
 	padding-top: 14px;
 	padding-bottom: 14px;
 	outline: none;
 	font-size: 13px;	
-	border-bottom: 3px solid #307d63;
 	cursor: pointer;
 }
