--- a/views/defaultPage.ejs
+++ b/views/defaultPage.ejs
@@ -19,18 +19,19 @@
     <% } %>
     <div class="wrap">
      <form action='/login' method ='POST'>
-	    <input type="text" name = "username" placeholder="username" required>
-	    <div class="bar">
-		<i></i>
+        <div class="form-group">
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="아이디를 입력 하세요" name = "username" required>
+            </div>
+            <div class="form-group">
+             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="암호" name = "password" required>
+              </div>
+            <button type="submit" class="btn btn-primary">로그인</button>
 	    </div>
-	    <input type="password" name = "password" placeholder="password" required>
-         <input type = "submit" value = "Sign in">
       </form>
      </div>
-
-     <div class = "wrap">
+     <div class = "wrap" style="margin-top:10px">
         <a href='/signup'>
-            <button type="button" class="btn btn-success">회원가입</button>
+            <button type="button" class="btn btn-warning">회원가입</button>
         </a>
      </div>
 </body>
