--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,9 +6,15 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     </head>
     <body>
+         <div class="pull-right">
+             <a href="/logout">
+                <button type="button" class="btn btn-danger">로그아웃</button>
+            </a>
+         </div>
         <div class="page-header">
             <h1>My Board <small>with Node.js</small></h1>
         </div>
+
         <div>
             <table class="table table-hover">
                 <thead>
