Add unique board Index

--- a/views/defaultPage.ejs
+++ b/views/defaultPage.ejs
@@ -15,7 +15,7 @@
     <% if(isSignUp == 1) { %>
         <div class="alert alert-success" role="alert">회원가입에 성공 하였습니다.</div>
     <% } else if(isSignUp == -1){ %> 
-        <div class="alert alert-danger" role="alert">회원가입에 실패 하였습니다. <br/>중복된 아이디오니 다시 로그인해주시길 바랍니다.</div>
+        <div class="alert alert-danger" role="alert">회원가입에 실패 하였습니다. <br/>중복된 아이디오니 다시 회원가입 해주시길 바랍니다.</div>
     <% } %>
     <div class="wrap">
      <form action='/login' method ='POST'>
