--- a/views/read.ejs
+++ b/views/read.ejs
@@ -1,11 +1,38 @@
 <html>
-    <head>
-        <!-- 합쳐지고 최소화된 최신 CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-        안녕
-    </body>
+<head>
+    <!-- 합쳐지고 최소화된 최신 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+ 
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+</head>
+<body>
+    <div id="container">
+    <table class="table table-bordered">
+    <thead>
+        <caption> 글 </caption>
+    </thead>
+    <tbody>
+            <tr>
+                <th>번호: </th>
+                <td><textarea cols="10" rows="1" class="form-control" readonly><%=writing.num %></textarea></td>
+                </tr>
+            <tr>
+                <th>작성자: </th>
+                <td><textarea cols="10" rows="1" class="form-control" readonly><%=writing.writer %></textarea></td>
+            </tr>
+            <tr>
+                <th>제목: </th>
+                <td><textarea cols="10" name="title" class="form-control" readonly><%=writing.title %></textarea></td>
+            </tr>
+            <tr>
+                <th>내용: </th>
+                <td><textarea cols="10" name="content" class="form-control" readonly><%=writing.contents %></textarea></td>
+            </tr>
+    </tbody>
+    </table>   
+</div>
+<a class="btn btn-default" href="/main" role="button">목록</a> 
+</body>
 </html>
