--- a/views/read.ejs
+++ b/views/read.ejs
@@ -33,6 +33,8 @@
     </tbody>
     </table>   
 </div>
-<a class="btn btn-default" href="/main" role="button">목록</a> 
+<div class="text-center">
+    <a class="btn btn-default" role="button" href=<%= "/main?pos=1" %>> 목록</a> 
+</div>
 </body>
 </html>
