view page, delete page

--- a/views/read.ejs
+++ b/views/read.ejs
@@ -34,7 +34,8 @@
     </table>   
 </div>
 <div class="text-center">
-    <a class="btn btn-default" role="button" href=<%= "/main?pos=1" %>> 목록</a> 
+    <a class="btn btn-default" role="button" href="/main?pos=1"> 목록</a> 
+    <a class="btn btn-danger" role="button" href=<%="/deletepage?index=" + writing.num %>> 삭제</a> 
 </div>
 </body>
 </html>
