--- a/views/main.ejs
+++ b/views/main.ejs
@@ -47,7 +47,7 @@
  
     </div>
 </div>
-<a class="btn btn-default" href="/main/new" role="button">글쓰기</a>
+<a class="btn btn-default" href="/main/write" role="button">글쓰기</a>
 </body>
 <script>
 for(var i=0;i<'<%= maxDisplayNum %>';i++){
