--- a/views/write.ejs
+++ b/views/write.ejs
@@ -15,13 +15,16 @@
     </thead>
     <tbody>
         <form action="/main/write-complete" method="post">
+            <% if(isUpdate){%>
+                <input type="hidden" name="number" value=<%= number %>>
+            <%}%>
             <tr>
                 <th>제목: </th>
-                <td><input type="text" placeholder="제목을 입력하세요. " name="title" class="form-control"/></td>
+                <td><input type="text" placeholder="제목을 입력하세요. " name="title" class="form-control" value=<%= title %>></td>
             </tr>
             <tr>
                 <th>내용: </th>
-                <td><textarea cols="10" placeholder="내용을 입력하세요. " name="content" class="form-control"></textarea></td>
+                <td><textarea cols="10" placeholder="내용을 입력하세요. " name="content" class="form-control"><%=content %></textarea></td>
             </tr>
             <tr>
                 <td colspan="2">
