--- a/views/read.ejs
+++ b/views/read.ejs
@@ -35,6 +35,8 @@
 </div>
 <div class="text-center">
     <a class="btn btn-default" role="button" href=<%= "/main?pos=1" %>> 목록</a> 
+    <a class="btn btn-default" role="button" href=<%= "/main/write?number="+writing.num %>> 수정</a> 
+    <a class="btn btn-default" role="button" href=<%= "/main?pos=1" %>> 삭제</a> 
 </div>
 </body>
 </html>
